# featvis

./: CMakeLists.txt  README.md
docs/: USAGE.txt
include/: featvis.h
sample/: 1-gist-extract.sh  2-dmatrix-calc.sh  3-mds-cartesian.sh  4-segment-flann.sh  5-visualize.sh  README.md
sample/images/: README.md
src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.qrc  osghdf.cpp  osghdf.hpp  qtosgwidget.cpp  qtosgwidget.hpp
src/gist/: gist.c  hdfdata.c  main.c  raster.c  standalone_image.h
src/tools/: CMakeLists.txt  featmatrix.c  featmds.c  featsne.cpp  hdfdata.c  matrix.c  mds.c  raster.c  vsegment.c
src/tools/gist/: gist.h  standalone_image.c
